--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Candid Chess",
-  "name": "Candid Chess",
+  "short_name": "Oh My Chess",
+  "name": "Oh My Chess",
   "icons": [
     {
       "src": "favicon.ico",
